--- a/src/app/Paginas/Body/backup/currencies/currencies.component.html
+++ b/src/app/Paginas/Body/backup/currencies/currencies.component.html
@@ -67,7 +67,7 @@
 <!-- ------------------------------------------------------------------------------------------------------ -->
 
 <div class="container text-center" *ngIf="currenciesService.Currencies.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">{{util.msj}}</h2>
+  <h4 class="font-weight-normal">{{util.msj}}</h4>
 </div>
 <div *ngIf="currenciesService.Currencies.length > 0" class="overflow-x-scroll">
   <table class="table table-hover table-fixed-xl">
@@ -155,6 +155,7 @@
           </button>
         </td>
       </tr>
+      <query-complete isFiltro="true"></query-complete>
     </tbody>
   </table>
 </div>
