--- a/src/app/Paginas/Body/backup/preferences/preferences.component.html
+++ b/src/app/Paginas/Body/backup/preferences/preferences.component.html
@@ -50,7 +50,7 @@
 <!-- ------------------------------------------------------------------------------------------------------ -->
 
 <div class="container text-center" *ngIf="preferencesService.Preferences.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">{{util.msj}}</h2>
+  <h4 class="font-weight-normal">{{util.msj}}</h4>
 </div>
 <div *ngIf="preferencesService.Preferences.length > 0" class="overflow-x-scroll">
   <table class="table table-hover table-fixed-xl">
@@ -129,6 +129,7 @@
           </button>
         </td>
       </tr>
+      <query-complete isFiltro="true"></query-complete>
     </tbody>
   </table>
 </div>
