--- a/src/app/Paginas/Body/backup/accounts/accounts.component.html
+++ b/src/app/Paginas/Body/backup/accounts/accounts.component.html
@@ -179,7 +179,7 @@
 <!-- ------------------------------------------------------------------------------------------------------ -->
 
 <div class="container text-center" *ngIf="accountService.Accounts.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">{{util.msj}}</h2>
+  <h4 class="font-weight-normal">{{util.msj}}</h4>
 </div>
 <div *ngIf="accountService.Accounts.length > 0" class="overflow-x-scroll">
   <table class="table table-hover table-fixed-xl">
@@ -368,6 +368,7 @@
           </button>
         </td>
       </tr>
+      <query-complete isFiltro="true"></query-complete>
     </tbody>
   </table>
 
