--- a/src/app/Paginas/Body/backup/automatics/automatics.component.html
+++ b/src/app/Paginas/Body/backup/automatics/automatics.component.html
@@ -165,7 +165,7 @@
 </div>
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <div class="container text-center" *ngIf="automaticService.Automatics.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">{{util.msj}}</h2>
+  <h4 class="font-weight-normal">{{util.msj}}</h4>
 </div>
 <div *ngIf="automaticService.Automatics.length > 0"  class="overflow-x-scroll">
   <table class="table table-hover table-fixed-xl">
@@ -382,6 +382,7 @@
           </button>
         </td>
       </tr>
+      <query-complete isFiltro="true"></query-complete>
     </tbody>
   </table>
 </div>
