--- a/src/app/Paginas/Body/backup/extras/extras.component.html
+++ b/src/app/Paginas/Body/backup/extras/extras.component.html
@@ -53,7 +53,7 @@
 <!-- ------------------------------------------------------------------------------------------------------ -->
 
 <div class="container text-center" *ngIf="extrasService.Extras.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">{{util.msj}}</h2>
+  <h4 class="font-weight-normal">{{util.msj}}</h4>
 </div>
 <div *ngIf="extrasService.Extras.length > 0" class="overflow-x-scroll">
   <table class="table table-hover table-fixed-xl">
@@ -140,6 +140,7 @@
           </button>
         </td>
       </tr>
+      <query-complete isFiltro="true"></query-complete>
     </tbody>
   </table>
 </div>
